--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="yellow">#FFFFFDC7</color>
+    <color name="yellow_skin">#feffa3</color>
+    <color name="dark_red">#B22222</color>
+    <color name="off_white">#F5F5F5</color>
+    <color name="buttom_color">#AFD5F0</color>
 </resources>
