--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="yellow">#FFFFFDC7</color>
     <color name="yellow_skin">#feffa3</color>
     <color name="dark_red">#B22222</color>
+    <color name="red">#ff6961</color>
     <color name="off_white">#F5F5F5</color>
     <color name="buttom_color">#AFD5F0</color>
 </resources>
