--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="dark_red">#B22222</color>
     <color name="red">#ff6961</color>
     <color name="off_white">#F5F5F5</color>
-    <color name="buttom_color">#AFD5F0</color>
+    <color name="buttom_color">#1C75B5</color>
 </resources>
