--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,42 +25,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/intro_pic" />
 
+
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="28dp"
-        android:backgroundTint="#1C75B5"
-        android:bottomLeftRadius="20dp"
-        android:bottomRightRadius="20dp"
-        android:padding="10dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/custom_login_button"
+        android:backgroundTint="@color/buttom_color"
         android:text="Login"
         android:textColor="@color/off_white"
-        android:textSize="20dp"
-        android:topLeftRadius="60dp"
-        android:topRightRadius="60dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="28dp"
-        android:backgroundTint="#1C75B5"
-        android:bottomLeftRadius="60dp"
-        android:bottomRightRadius="60dp"
-        android:padding="12dp"
-        android:text="Register"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        android:topLeftRadius="50dp"
-        android:topRightRadius="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_percent="0.8" />
 
     <ImageView
         android:id="@+id/imageView"
