--- a/app/src/main/res/drawable/custom_boder_text_login.xml
+++ b/app/src/main/res/drawable/custom_boder_text_login.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#FFFFFF"/> <!-- Background color -->
+    <stroke
+        android:width="2dp"
+        android:color="#FF0000"/> <!-- Border color and width -->
+    <corners android:radius="20dp"/> <!-- Corner radius -->
+</shape>
