--- a/app/src/main/res/layout/activity_screen_login.xml
+++ b/app/src/main/res/layout/activity_screen_login.xml
@@ -23,7 +23,7 @@
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="132dp"
                 app:srcCompat="@drawable/logo" />
 
             <LinearLayout
@@ -56,6 +56,7 @@
                 android:background="@drawable/custom_boder_text_login"
                 android:ems="10"
                 android:hint="Email"
+                android:textAlignment="center"
                 android:inputType="textEmailAddress" />
 
             <EditText
@@ -66,6 +67,7 @@
                 android:background="@drawable/custom_boder_text_login"
                 android:ems="10"
                 android:hint="Password"
+                android:textAlignment="center"
                 android:inputType="textPassword" />
 
             <TextView
@@ -83,8 +85,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
+                android:textColor="@color/white"
                 android:background="@drawable/custom_login_button"
-                android:backgroundTint="@color/buttom_color"
+                android:backgroundTint="@color/red"
                 android:text="login" />
 
             <LinearLayout
@@ -92,6 +95,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="25dp"
                 android:layout_marginEnd="25dp"
+                android:layout_marginBottom="20dp"
                 android:orientation="horizontal">
 
                 <View
@@ -153,6 +157,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
+                android:layout_marginTop="20dp"
                 android:orientation="horizontal">
 
                 <TextView
