--- a/app/src/main/res/layout/activity_screen_login.xml
+++ b/app/src/main/res/layout/activity_screen_login.xml
@@ -81,7 +81,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/button_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
