--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="red">#ff6961</color>
     <color name="off_white">#F5F5F5</color>
     <color name="buttom_color">#1C75B5</color>
+    <color name="grey">#CCCCCC</color>
+    <color name="search_field">#D4FAFA</color>
 </resources>
