--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,11 +6,12 @@
     </style>
 
     <style name="Theme.Recipe_application" parent="Base.Theme.Recipe_application" />
-    <style parent="Theme.SplashScreen" name="Theme.App.SplashScreen">
+
+    <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/yellow</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/recipe</item>
         <item name="postSplashScreenTheme">@style/Base.Theme.Recipe_application</item>
-        
+
         <item name="windowSplashScreenAnimationDuration">5000</item>
     </style>
 </resources>
